src/test/deca/syntax/invalid/testExprWhile3.deca
// test invalid while statements
// Result : Error
// no statement to check
{
    while(){
        printx("Ok");
    }
}
